--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# VIM: Temperory files
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+tags
+cscope.*
+Session.vim
+.netrwhist
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
